Font-size correction on mobile

--- a/src/stateless/CardCartItem/styles.scss
+++ b/src/stateless/CardCartItem/styles.scss
@@ -25,6 +25,14 @@
     font-weight: 700;
   }
 
+  &__price {
+    font-size: 16px;
+
+    @media (max-width: 768px) {
+      font-size: 13px;
+    }
+  }
+
   &__info {
     display: flex;
     margin-left: 20px;
